--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^5.1.3"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.5",
+    "express": "^4.18.2",
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
